# FinViz

./: LICENSE  README.md  Readme.md
backend/: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-hooks.yaml  Makefile  README.md  config.py  pyproject.toml  requirements.txt  run.py  wsgi.py
backend/.github/workflows/: ci.yml  lint.yml
backend/app/: __init__.py  extensions.py  init.py
backend/app/middleware/: auth.py  error_handler.py  init.py  rate_limiter.py
backend/app/models/: __init__.py  budget.py  category.py  monthly_stats.py  transaction.py  user.py
backend/app/routes/: __init__.py  admin.py  analytics.py  auth.py  budgets.py  categories.py  dashboard.py  exports.py  health.py  imports.py  reports.py  transactions.py  users.py  webhooks.py
backend/app/schemas/: __init__.py  analytics_schema.py  budget_schema.py  category_schema.py  transaction_schema.py  user_schema.py
backend/app/services/: __init__.py  analytics_service.py  budget_service.py  cache_service.py  dashboard_service.py  export_service.py  file_service.py  import_service.py  notification_service.py  report_service.py  validation_service.py
backend/app/utils/: __init__.py  constants.py  decorators.py  helpers.py  validators.py
backend/docker/: .dockerignore  Dockerfile  docker-compose.yml
backend/scripts/: backup.py  fix_linting.py  fix_setup.py  generate_mock.py  seed.py  setup_hooks.sh
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_transactions.py
backend/tests/error/: test_validation.py
backend/tests/integration/: test_database.py
backend/tests/unit/: test_models.py  test_services.py
frontend/: .env.example  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc.js  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  routes.tsx
frontend/src/components/auth/: ForgotPasswordForm.tsx  LoginForm.tsx  RegisterForm.tsx  ResetPasswordForm.tsx
frontend/src/components/common/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/transactions/: TransactionDetails.tsx  TransactionForm.tsx  TransactionTable.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/analytics/: Analytics.tsx
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx
frontend/src/pages/budgets/: Budgets.tsx
frontend/src/pages/categories/: Categories.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/public/: About.tsx  Home.tsx
frontend/src/pages/reports/: Reports.tsx
frontend/src/pages/settings/: Settings.tsx
frontend/src/pages/transactions/: Transactions.tsx
frontend/src/pages/trends/: Trends.tsx
frontend/src/services/: api.ts  datatables.ts
frontend/src/styles/: globals.css
frontend/src/types/: datatables.d.ts  env.d.ts  index.ts
frontend/src/utils/: env.ts
